# LouisLetcher

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  collaboration.yml  config.yml
.github/workflows/: codeql.yml  link-check-external.yml  link-check.yml  lint.yml  pages.yml  weekly-pulse.yml
docs/: AUDIT.md  CHANGELOG-PUBLIC.md  GITHUB-PAGES-SETUP.md  PINNED-REPOS.md  _config.yml  index.md  open-core-roadmap.md  signal-marketplace.md  verified-track-record.md
docs/architecture/: data-pipeline-patterns.md  oms-rms-kill-switch.md  quant-system-overview.md
docs/case-studies/: quant-system.md
docs/community/: martech-to-quant.md
tests/: __init__.py  test_cli.py  test_link_checker.py  test_pulse_generator.py  test_telemetry.py
tools/profile_ops/: cli.py  link_checker.py  logging_config.py  pulse_generator.py  telemetry.py
tools/profile_ops.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
