[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profile-ops"
version = "0.1.0"
description = "Idempotent link validation and weekly pulse generation for LouisLetcher profile hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",
]

[project.scripts]
profile-ops = "profile_ops.cli:main"

[tool.setuptools.package-dir]
"" = "tools"

[tool.setuptools.packages.find]
where = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["profile_ops"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
