[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "profile-ops"
version = "0.1.0"
description = "Idempotent link validation and weekly pulse generation for LouisLetcher profile hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27",
  "opentelemetry-api>=1.27",
  "opentelemetry-sdk>=1.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
profile-ops = "profile_ops.cli:main"

[tool.setuptools.package-dir]
"" = "tools"

[tool.setuptools.packages.find]
where = ["tools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
source = ["profile_ops"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["tools", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
mypy_path = "tools"
packages = ["profile_ops"]
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
